[package]
name = "rust_trader"
version = "0.1.0"
authors = ["filosofis <olundqvist89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "*"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }